Bug 515993 - [5.3/5.4, Android] Half the screen turns black when opening a .kra file while in landscape orientation
Summary: [5.3/5.4, Android] Half the screen turns black when opening a .kra file while...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 14.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2026-02-14 17:39 UTC by Door1
Modified: 2026-02-18 11:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Door1 2026-02-14 17:39:55 UTC
SUMMARY
This bug occurs in a recent nightly build, but not in 5.3 beta 1, suggesting this is a regression caused by a recent patch. Note: this bug was found using two different Android phones, not a tablet. So try installing the APK on Android phone to reproduce the issue.

STEPS TO REPRODUCE
1. Turn your phone to landscape mode.
2. Open a .kra file

OBSERVED RESULT
Half the screen turns black, with the UI squished into the other half of the screen.

EXPECTED RESULT
The whole screen has the UI, like in 5.3 beta 1.

SOFTWARE/OS VERSIONS
Krita 5.4 nightly
Android 16
arm64
git 027815a6 (Feb. 14, 2026)



ADDITIONAL INFORMATION
This bug can be disappeared if you change the screen orientation once again after opening the first .kra, although it will return if you open another .kra file.
Comment 1 dra.w.p.il.e+bugskde 2026-02-17 19:32:38 UTC
I can reproduce this when starting Krita in portrait mode and then rotating it to landscape.

This is due to the hack that calls setFixedSize on start, which is fixable by calling that when the screen rotates. However, that brings back the problem where the screen doesn't repaint after opening a document. So I guess we have to go back to the solution that flickers the window.
Comment 2 Bug Janitor Service 2026-02-17 19:36:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2653
Comment 3 Dmitry Kazakov 2026-02-18 10:41:05 UTC
Git commit fdb6fca1624f24a0cd509c7e557e04bfb9024486 by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 18/02/2026 at 10:40.
Pushed by dkazakov into branch 'krita/6.0'.

[android] Go back to flickering main window

When opening a document, since the solution of resizing it causes
problems on some devices and fixing those problems brings back the
problem of the screen not repainting. Hiding and showing the window
causes some flickering and has to be excluded on Xiaomi devices because
they misbehave and add bars around the application, but it actually
solves the problem.

M  +18   -11   libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/fdb6fca1624f24a0cd509c7e557e04bfb9024486
Comment 4 Dmitry Kazakov 2026-02-18 11:00:56 UTC
Git commit d52d3cf0d2b4a7a911c3a8f08396ed0a06dd495f by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 18/02/2026 at 11:00.
Pushed by dkazakov into branch 'release/6.0.0'.

[android] Go back to flickering main window

When opening a document, since the solution of resizing it causes
problems on some devices and fixing those problems brings back the
problem of the screen not repainting. Hiding and showing the window
causes some flickering and has to be excluded on Xiaomi devices because
they misbehave and add bars around the application, but it actually
solves the problem.

M  +18   -11   libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/d52d3cf0d2b4a7a911c3a8f08396ed0a06dd495f