[android] Go back to flickering main window

When opening a document, since the solution of resizing it causes
problems on some devices and fixing those problems brings back the
problem of the screen not repainting. Hiding and showing the window
causes some flickering and has to be excluded on Xiaomi devices because
they misbehave and add bars around the application, but it actually
solves the problem.

BUG:515993